--- a/src/app/components/problem5/faulty/faulty.component.html
+++ b/src/app/components/problem5/faulty/faulty.component.html
@@ -33,13 +33,22 @@
           <th scope="col">R Curr</th>
           <th scope="col">Y Curr</th>
           <th scope="col">B Curr</th>
+          <th scope="col">Raw Power</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>{{selectedValue}}</td>
-          <td>{{aev}}</td>
-          <td>{{faulty}}</td>
+          <td>{{data.macId}}</td>
+          <td>{{data.insStatus}}</td>
+          <td>{{data.atm}}</td>
+          <td>{{data.temp}}</td>
+          <td>{{data.ups}}</td>
+          <td>{{data.earth}}</td>
+          <td>{{data.rcur}}</td>
+          <td>{{data.ycur}}</td>
+          <td>{{data.bcur}}</td>
+          <td>{{data.rawPowOk}}</td>
+          
         </tr>
       </tbody>
     </table>
